--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Guest List</string>
     <string name="live_events">Live Events</string>
     <string name="guests">Guests</string>
+    <string name="sync_data">Veriler Senkronize Ediliyor...</string>
 </resources>
